# FBLens

./: .gitignore  README.md  main.py  pyproject.toml
core/: models.py
interfaces/: feature_builder.py  ranker.py  retriever.py
search_engine/: main.py
search_engine/core/: models.py  pipeline.py  spelling.py
search_engine/data/: documents.json
search_engine/indexing/: prefix_indexer.py  tokenizer.py  trigram_indexer.py
search_engine/ranking/: weighted.py
search_engine/retrieval/: hybrid.py  prefix.py  trigram.py
search_engine/storage/: schema.sql  sqlite.py
tests/: test_search.py  test_search_quality.py
