[project]
name = "fblens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pixelThreader", email = "rana.workslance@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
